<resources>
    <!-- タイトル -->
    <string name="app_name">表情選手権</string>
    <string name="scoring_result">採点結果</string>
    <string name="ranking">順位発表</string>
    <string name="battle_history">対戦履歴</string>
    <string name="battle_history_detail">対戦履歴詳細</string>

    <string name="description">ランダムで出されるお題に対して\n表情スコア100点を目指そう！</string>
    <string name="battle">対戦する(最大4人)</string>
    <string name="home">ホーム</string>
    <string name="theme">お題: %sの表情</string>
    <string name="take_photo">Take Photo</string>
    <string name="retry_photo">撮り直す</string>
    <string name="score_image">採点する</string>
    <string name="score_theme">%s度:</string>
    <string name="score_result">%s点</string>
    <string name="challenger_name">挑戦者名</string>
    <string name="next_challenger">次の\n挑戦者</string>
    <string name="theme_ranking">%s度ランキング</string>
    <string name="score_rank">%s位</string>
    <string name="challenge_name">対戦名</string>
    <string name="save_challenge_result">対戦結果を保存</string>
    <string name="saved_challenge_result">対戦結果を保存しました</string>
    <string name="battle_theme">テーマ</string>
    <string name="no_battle_history">対戦履歴がありません</string>
    <string name="delete_challenge_history">対戦履歴を削除</string>
    <string name="deleted_challenge_history">対戦履歴を削除しました</string>

    <!-- テーマ -->
    <string name="anger">怒り</string>
    <string name="contempt">軽蔑</string>
    <string name="disgust">嫌悪</string>
    <string name="fear">恐れ</string>
    <string name="happiness">幸せ</string>
    <string name="neutral">無表情</string>
    <string name="sadness">悲しみ</string>
    <string name="surprise">驚き</string>

    <string name="anger_score">怒り: %s点</string>
    <string name="contempt_score">軽蔑: %s点</string>
    <string name="disgust_score">嫌悪: %s点</string>
    <string name="fear_score">恐れ: %s点</string>
    <string name="happiness_score">幸せ: %s点</string>
    <string name="neutral_score">無表情: %s点</string>
    <string name="sadness_score">悲しみ: %s点</string>
    <string name="surprise_score">驚き: %s点</string>

    <!-- ダイアログ -->
    <string name="alert_back_title">対戦データが失われます</string>
    <string name="alert_back_message">本当に戻りますか？</string>
    <string name="alert_delete_title">対戦履歴が削除されます</string>
    <string name="alert_delete_message">本当に削除しますか？</string>

    <!-- エラーメッセージ -->
    <string name="retry">リトライ</string>
    <string name="permission_error_message">端末の設定からカメラと写真へのアクセスを許可してください</string>
    <string name="failed_save_image">画像の保存に失敗しました</string>
    <string name="failed_get_image_path">画像の取得に失敗しました</string>
    <string name="error_message_default">通信エラーです</string>
    <string name="failed_facial_expression">表情が読み取れませんでした</string>
    <string name="failed_detect_image">画像の読取りに失敗しました</string>
    <string name="time_out_error">通信がタイムアウトしました</string>
    <string name="uncertain_error">不明なエラーが発生しました</string>
    <string name="enter_name">挑戦者の名前を入力してください</string>
    <string name="require_more_than_two">対戦は2人以上必要です</string>
    <string name="up_to_four">対戦は最大4人までとなります</string>
    <string name="enter_challenge_name">対戦名を入力してください</string>
</resources>
